Remove no longer needed JPMS workaround for Kotlin compiler daemon
The underlying problem was fixed in Kotlin 1.5.0